# tark

./: .gitattributes  .gitignore  .luarc.json  AGENTS.md  APPROVALGATE_REMOVAL_COMPLETE.md  BFF_BDD_SUMMARY.md  BFF_IMPLEMENTATION.md  CONTRIBUTING.md  Cargo.toml  DEBUG_LOGGING_SUMMARY.md  DEBUG_LOG_ANALYSIS.md  DESIGN.md  Dockerfile  Dockerfile.alpine  EXAMPLE_CORRELATION_TRACE.md  FINAL_STATUS.md  FIX_BUILD_ERROR.md  GENERIC_OAUTH_IMPLEMENTATION.md  IMPLEMENTATION_EXTERNAL_AGENTS.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  POLICY_ENGINE_COMPLETE.md  POLICY_ENGINE_STATUS.md  POLICY_REFACTOR_SUMMARY.md  PROVIDER_SWITCH_AND_MAX_ITERATIONS_FIX.md  README.md  TEST_COVERAGE_SUMMARY.md  TEST_THINKING_FEATURE.md  THINKING_DISPLAY_FIX_COMPLETE.md  THINKING_STATUS_BAR.md  THINKING_SYSTEM_FIXES_COMPLETE.md  TUI_BFF_IMPLEMENTATION_SUMMARY.md  TUI_GAPS_IMPLEMENTATION_SUMMARY.md  TUI_LOGGING_IMPROVEMENTS.md  TUI_TESTING_GUIDE.md  UNDERSTANDING.md  UNIFIED_THINKING_IMPLEMENTATION_SUMMARY.md  VERIFICATION_COMPLETE.md  build.rs  (+9 more)
.changes/: provider-display-fix.md
.cursor/plans/: realtime_streaming.md  unified_thinking_support.plan.md
.github/: CODEOWNERS
.github/workflows/: build-manual.yml  ci.yml  docker.yml  release.yml
.playground/: abc.txt  fiel  helldkjsl.txt
.roadmap/: README.md
.roadmap/plans/: 001-gemini-oauth-discovery.md  002-plugin-runtime.md  icon-themes.md  native-tools-mcp-client.md  proposals-diff-popup.md  steering-files-feature.md
config/: default.toml
docs/: BFF_ARCHITECTURE.md  DISCORD_PRIVATE_SETUP.md  EDITOR_ADAPTER_API.md  EXTERNAL_AGENTS_ARCHITECTURE.md  NEW_PROVIDERS.md  PLUGIN_DEVELOPMENT.md  PLUGIN_SDK.md  REMOTE_CHANNELS.md  SECURITY.md  SIDEBAR_NAVIGATION.md  THEMES.md  THEME_QUICKSTART.md  TOOL_CALL_ARCHITECTURE.md  TUI_IMPROVEMENTS_SUMMARY.md  TUI_LLD_FLOW.md  TUI_MODAL_DESIGN_GUIDE.md  TUI_SETUP.md
docs/plans/: comprehensive_tool_abstraction.md  streaming_tool_abstraction.md
examples/tark-config/: config.toml
lua/Tark/: health.lua  init.lua
lua/tark/: binary.lua  chat.lua  ghost.lua  health.lua  init.lua  lsp.lua  lsp_server.lua  server.lua  session.lua  statusline.lua  tui.lua  usage.lua
nvim/plugin/: tark.vim
plugin/: tark.lua
plugins/gemini-oauth/: plugin.toml  plugin.wasm
proptest-regressions/tui/: agent_bridge.txt  commands.txt
src/: debug_logger.rs  lib.rs  main.rs  secure_store.rs
src/agent/: chat.rs  context.rs  mod.rs  rate_limit.rs  tool_orchestrator.rs
src/auth/: mod.rs  oauth.rs
src/channels/: mod.rs  remote.rs
src/completion/: cache.rs  engine.rs  fim.rs  mod.rs
src/config/: mod.rs
src/core/: attachments.rs  context_manager.rs  context_tracker.rs  conversation_manager.rs  errors.rs  mod.rs  session_manager.rs  tokenizer.rs  traits.rs  types.rs
src/diagnostics/: analyzer.rs  mod.rs
src/editor_adapter/: client.rs  mod.rs  types.rs
src/llm/: claude.rs  copilot.rs  debug_wrapper.rs  error.rs  gemini.rs  mod.rs  models_db.rs  ollama.rs  openai.rs  openai_compat.rs  openrouter.rs  plugin_provider.rs  raw_log.rs  tark_sim.rs  types.rs
src/lsp/: code_action.rs  completion.rs  diagnostics.rs  document.rs  hover.rs  mod.rs  server.rs
src/mcp/: client.rs  mod.rs  transport.rs  types.rs  wrapper.rs
src/orchestration/: agent_router.rs  mod.rs  multi_agent.rs  pipeline.rs
src/plugins/: mod.rs  oauth.rs  widget.rs  ws_host.rs
src/policy/: README.md  builtin_policy.toml  classifier.rs  config.rs  defaults.toml  engine.rs  integrity.rs  mcp.rs  migrate.rs  mod.rs  resolver.rs  schema.rs  security.rs  seed.rs  tools.toml  trust.toml  types.rs
src/services/: mod.rs  plan_service.rs
src/storage/: mod.rs  usage.rs
src/tools/: approval.rs  file_ops.rs  file_search.rs  grep.rs  lsp_tools.rs  mod.rs  mode_switch.rs  plan.rs  questionnaire.rs  risk.rs  shell.rs
src/transport/: acp.rs  cli.rs  dashboard.rs  http.rs  mod.rs  plugin_cli.rs  remote.rs
src/tui/: agent_bridge.rs  app.rs  attachments.rs  clipboard.rs  commands.rs  config.rs  editor_bridge.rs  events.rs  keybindings.rs  mod.rs  osc52.rs  plan_manager.rs  prompt_history.rs  usage_manager.rs
src/tui_new/: app.rs  config.rs  controller.rs  events.rs  git_info.rs  mod.rs  renderer.rs  session_prefs.rs  theme.rs  utils.rs
src/ui_backend/: approval.rs  catalog.rs  commands.rs  conversation.rs  errors.rs  events.rs  git_service.rs  middleware.rs  mod.rs  questionnaire.rs  remote_mirror.rs  service.rs  session_service.rs  state.rs  storage_facade.rs  tool_execution.rs  traits.rs  types.rs
tests/: PROVIDER_TESTS.md  README.md  TUI_TESTING_README.md  bff_integration_tests.rs  builtin_tools_test.rs  cli.rs  cucumber_e2e.rs  cucumber_integration_example.rs  cucumber_tui.rs  cucumber_tui_new.rs  gemini_auth.rs  minimal_init.lua  plugin_system.rs  policy_approval_tests.rs  policy_integration.rs  policy_unit_tests.rs  prompt_hash_test.rs  run_chat_tests.sh  session_api.rs  tark_sim_e2e.rs  tark_sim_integration.rs  tool_call_integration.rs  tool_isolation.rs  trust_level.rs  tui_e2e.rs  tui_snapshot_tests.rs  tui_widget_tests.rs  ui_backend_bdd.rs  ui_backend_catalog_test.rs  ui_backend_storage_test.rs  ui_backend_tool_test.rs  usage_api.rs  wasm_plugin_load.rs
tests/snapshots/: tui_snapshot_tests__ask_mode_with_question.snap  tui_snapshot_tests__empty_input.snap  tui_snapshot_tests__file_picker_modal_selected.snap  tui_snapshot_tests__initial_layout.snap  tui_snapshot_tests__mode_ask.snap  tui_snapshot_tests__mode_build.snap  tui_snapshot_tests__mode_plan.snap  tui_snapshot_tests__narrow_terminal.snap  tui_snapshot_tests__plan_mode_with_input.snap  tui_snapshot_tests__sidebar_hidden.snap  tui_snapshot_tests__sidebar_visible.snap  tui_snapshot_tests__theme_catppuccin_mocha.snap  tui_snapshot_tests__theme_nord.snap  tui_snapshot_tests__tool_diff_inline.snap  tui_snapshot_tests__tool_diff_split.snap  tui_snapshot_tests__wide_with_sidebar.snap  tui_snapshot_tests__with_input_text.snap  tui_snapshot_tests__with_welcome_message.snap
tests/specs/: binary_spec.lua  chat_spec.lua  ghost_spec.lua  health_spec.lua  init_spec.lua  lsp_spec.lua  server_spec.lua  (+3 more)
(+209 files in other folders)
