[package]
name = "tark-cli"
version = "0.8.0"
edition = "2021"
description = "AI-powered CLI agent with LSP server for code completion, hover, diagnostics, and chat"
authors = ["tark contributors"]
license = "MIT"

[[bin]]
name = "tark"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# LSP
tower-lsp = "0.20"

# HTTP server
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# HTTP client for LLM APIs (rustls for cross-compilation without OpenSSL)
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls", "blocking"] }

# Async utilities
async-trait = "0.1"
futures = "0.3"
tokio-stream = "0.1"

# Concurrent data structures
dashmap = "6"

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# File system tools
walkdir = "2"
ignore = "0.4"
grep-regex = "0.1"
grep-searcher = "0.1"

# Config
toml = "0.8"
directories = "5"

# Signal handling (for Ctrl+C force quit)
ctrlc = "3.4"

# Utilities
url = "2"
once_cell = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"  # For config directories
tempfile = "3"  # For tests
uuid = { version = "1", features = ["v4"] }
regex = "1"  # For word boundary matching in LSP tools
glob = "0.3"  # For pattern matching in approval system

# Tree-sitter for AST parsing (LSP-like code understanding)
tree-sitter = "0.22"
tree-sitter-rust = "0.21"
tree-sitter-typescript = "0.21"
tree-sitter-javascript = "0.21"
tree-sitter-python = "0.21"
tree-sitter-go = "0.21"
tree-sitter-json = "0.21"

# Usage tracking
rusqlite = { version = "0.31", features = ["bundled"] }
whoami = "1"
tabled = "0.17"
colored = "2"

# TUI (Terminal User Interface)
ratatui = "0.28"
crossterm = "0.28"
arboard = "3.4"
image = "0.25"
unicode-width = "0.2.2"
pulldown-cmark = "0.10"  # Markdown parsing

# WASM Plugin Runtime
wasmtime = "27"
wasmtime-wasi = "27"
semver = "1"

# Test simulation dependencies (behind feature flag)
gherkin = { version = "0.14", optional = true }
tiktoken-rs = { version = "0.5", optional = true }
sha2 = { version = "0.10", optional = true }

# MCP Client support (optional)
mcp-protocol-sdk = { version = "0.5", optional = true, default-features = false, features = ["stdio"] }

# BDD/Cucumber testing (optional - run with: cargo test --features cucumber-tests)
cucumber = { version = "0.21", optional = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
proptest = "1.5"
futures = "0.3"
insta = { version = "1.40", features = ["filters"] }
portable-pty = "0.8"

[features]
default = ["test-sim", "mcp-client"]
test-sim = ["gherkin", "tiktoken-rs", "sha2"]
mcp-client = ["mcp-protocol-sdk"]
# BDD/Cucumber tests - not in default, run with: cargo test --features cucumber-tests
cucumber-tests = ["cucumber"]
# Snapshot tests - not in default, run with: cargo test --features snapshot-tests
snapshot-tests = []
